5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1650_2730.log
== TEST (2019-04-27 23:08:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

q1 > 0
q2 < 0
q3 < 0
q4 > 0

if(x > 0 and y > 0):
	print("Superiores")
else:
	print("Inferiores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    q1 > 0
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:09:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if(x > 0 and y > 0):
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:09:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if(x > 0 and y > 0):
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:09:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if(x > 0 and y > 0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.117543
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:14:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if(x > 0 and y > 0):
	print("Superiores")
elif(x > 0 and y < 0):
	print("Superiores")
elif(x < 0 and y > 0):
	print("Inferiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:14:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if(x > 0 and y > 0):
	print("Superiores")
elif(x > 0 and y < 0):
	print("Superiores")
elif(x < 0 and y > 0):
	print("Inferiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:15:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if(x > 0 and y > 0):
	print("Superiores")
elif(x > 0 and y < 0):
	print("Superiores")
elif(x < 0 and y > 0):
	print("Inferiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:15:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if(x > 0 and y > 0):
	print("Superiores")
elif(x > 0 and y < 0):
	print("Superiores")
elif(x < 0 and y > 0):
	print("Inferiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:15:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if(x > 0 and y > 0):
	print("Superiores")
elif(x > 0 and y < 0):
	print("Superiores")
elif(x < 0 and y > 0):
	print("Inferiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:15:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if(x > 0 and y > 0):
	print("Superiores")
elif(x > 0 and y < 0):
	print("Superiores")
elif(x < 0 and y > 0):
	print("Inferiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.16803
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:22:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if(x > 0 and y > 0):
	print("Superiores")
elif(x < 0 and y > 0):
	print("Superiores")
elif(x > 0 and y < 0):
	print("Inferiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.125356
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
